--- a/crates/driver_virtio/Cargo.toml
+++ b/crates/driver_virtio/Cargo.toml
@@ -15,6 +15,7 @@ net = ["driver_net"]
 gpu = ["driver_display"]
 
 [dependencies]
+log = "0.4"
 driver_common = { path = "../driver_common" }
 driver_block = { path = "../driver_block", optional = true }
 driver_net = { path = "../driver_net", optional = true }
